--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "devDependencies": {
     "@types/express": "^4.17.18",
     "@types/node": "^20.8.0",
+    "@types/uuid": "^9.0.8",
+    "@types/ws": "^8.5.10",
     "rimraf": "^5.0.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
@@ -21,6 +23,8 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "env-var": "^7.4.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "uuid": "^9.0.1",
+    "ws": "^8.16.0"
   }
 }
